syntax = "proto2";
import public "hall_data.proto";
import public "common_client.proto";

package ddproto;

// 活动列表
message hall_req_event {
    optional ProtoHeader header = 1;
}
//活动列表ACK
message hall_ack_event {
    optional ProtoHeader header = 1;
    repeated hall_item_event eventList = 2;
}


// 邮件
message hall_req_mail {
    optional ProtoHeader header = 1;
}

message hall_ack_mail {
    optional ProtoHeader header = 1;
    repeated hall_item_email emailList = 2;
}


// 任务
message hall_req_task {
    optional ProtoHeader header = 1;
}

message hall_ack_task {
    optional ProtoHeader header = 1;
    repeated hall_item_task taskList = 2;
}


//领取任务
message hall_req_getTask {
    optional ProtoHeader header = 1;
}

message hall_ack_getTask {
    optional ProtoHeader header = 1;
    optional int32 finishedNum = 2; //已完成数量
}


// 背包
message hall_req_bag {
    optional ProtoHeader header = 1;
}

message hall_ack_bag {
    optional ProtoHeader header = 1;
    repeated hall_item_bag bagItemList = 2;
}


//个人信息
message hall_req_userData {
    optional ProtoHeader header = 1;
}

message hall_ack_userData {
    optional ProtoHeader header = 1;
    optional hall_userData user = 2;
}


//======================商城商品列表======================
//商品类型
enum hall_enum_goods_type {
    TYPE_COIN = 1; //充值金币
    TYPE_DIAMOND = 2; //充值钻石
    TYPE_EXCHANGE = 3; //兑换专区
    TYPE_BUY = 4; //购买道具
    TYPE_VIP = 5; //充值会员
}
//商品列表Req
message hall_req_goods_list {
    optional ProtoHeader header = 1;
    optional hall_enum_goods_type goods_type = 2;
}
//商品列表Ack
message hall_ack_goods_list {
     optional ProtoHeader header = 1;
     optional hall_enum_goods_type goods_type = 2;
     repeated hall_goods_item_msg items = 3; //  物品信息
}

//单个商品信息
message hall_goods_item_msg {
    optional int32 goods_id = 1; //商品id
    optional string name = 2; //  物品名称
    optional int32 coin = 3;  //  金币
    optional int32 diamond = 4; //  钻石
    optional int32 money = 5;  //  金钱
    optional string discount = 6; //  折扣
}

//排行
message hall_req_rank {
    optional ProtoHeader header = 1;
}

message hall_ack_rank {
    optional ProtoHeader header = 1;
    repeated hall_item_rank rankList = 2;
}


// 转盘签到奖励物品信息
message hall_ack_ds_lottery_items {
    optional ProtoHeader header = 1;
    repeated hall_lottery_item dialItems = 2; //转盘奖励物品
    optional hall_sign_lottery_info signInfo = 3; //签到信息与奖励物品
}


//签到动作
message hall_req_sign_lottery {
    optional ProtoHeader header = 1;
}

message hall_ack_sign_lottery {
    optional ProtoHeader header = 1;
    optional int32 lotteryId = 2; //奖励物品id
}


//抽奖动作
message hall_req_draw_lottery {
    optional ProtoHeader header = 1;
}

message hall_ack_draw_lottery {
    optional ProtoHeader header = 1;
    optional int32 lotteryId = 2; //奖励物品id
}