syntax = "proto2";


package ddproto;

enum hall_enum_protoId {
    HALL_PID_HEARTBEAT = 0; //心跳
    HALL_PID_QUICK_CONN = 1; //连接服务器
    HALL_PID_QUICK_CONN_ACK = 2; //
    HALL_PID_GAME_LOGIN = 3; //登录游戏
    HALL_PID_GAME_LOGIN_ACK = 4; //

    HALL_PID_USER_DATA = 9; //请求个人信息
    HALL_PID_USER_DATA_ACK = 10; //回复个人信息

    HALL_PID_DRAW_LOTTERY = 11; //请求转盘抽奖
    HALL_PID_DRAW_LOTTERY_ACK = 12; //回复转盘抽奖

    HALL_PID_DS_LOTTERY_ITEMS_ACK = 13; //回复转盘签到奖励物品信息

    HALL_PID_SIGN_LOTTERY = 14; //请求签到奖励
    HALL_PID_SIGN_LOTTERY_ACK = 15; //回复签到奖励

    HALL_PID_ONLINEWARD_REQ = 16; //在线奖励
    HALL_PID_ONLINEWARD_ACK = 17; //在线奖励 回复

    HALL_PID_EVENT_REQ = 18; //活动列表请求
    HALL_PID_EVENT_ACK = 19; //活动列表ACK

    HALL_PID_GOODS_LIST_REQ = 20; //商品列表请求
    HALL_PID_GOODS_LIST_ACK = 21; //商品列表ACK

    HALL_PID_HOTUPDATEREQVERSIONINFO = 22; //商品列表ACK
    HALL_PID_HOTUPDATEACKVERSIONINFO = 23; //商品列表ACK

    HALL_PID_BAG_ITEMS_REQ = 24; //背包道具列表REQ
    HALL_PID_BAG_ITEMS_ACK = 25; //背包道具列表ACK
    HALL_PID_HOTUPDATEGAMEASSETSINFO_REQ = 26; //请求下载独立游戏
    HALL_PID_HOTUPDATEGAMEASSETSINFO_ACK = 27; //请求下载独立游戏ack
    HALL_PID_APPLE_PAY_CB_REQ = 28; //苹果支付回调
    HALL_PID_HOTUPDATEASSETSINFO_REQ = 29; //请求资源的信息
    HALL_PID_HOTUPDATEASSETSINFO_ACK = 30; //请求资源的信息回复

    HALL_PID_MAIL_LIST_REQ = 31;  //邮件列表REQ
    HALL_PID_MAIL_LIST_ACK = 32;  //邮件列表ACK
}

// 奖励物品信息
message hall_lottery_item {
    optional int32 id = 1;
    optional string name = 2;
}

//签到信息与奖励物品
message hall_sign_lottery_info {
    repeated hall_lottery_item signItems = 1; //签到奖励物品
    optional int32 totalDays = 2; //共签到多少天
    optional int32 continuousDays = 3; //连续签到天数
}

//单个活动
message hall_item_event {
    optional int32 id = 1; // 活动的Id
    optional hall_enum_event type = 2; //活动类型
    optional hall_enum_Reward reward = 3; //活动奖品
    repeated string richText = 5; //活动内容(其中会穿插富文本的超链接内容)
    optional string title = 6; //活动名称
}

//活动类型
enum hall_enum_event {
    TYPE_TIME = 1; //限时
    TYPE_NEW = 2; //最新
    TYPE_NULL = 3; //无
}

//活动奖品
enum hall_enum_Reward {
    RE_EXP = 1; //经验,道具
    RE_GIFT = 2; //礼品
}

//================================================邮件=====================================================

//单个邮件
message hall_mail_item {
    optional int32 id = 1;
    optional hall_enum_mail_type type = 2; //邮件类型
    optional string title = 3; //邮件标题
    optional string content = 4; //邮件内容
    optional bool isWatch = 5; //是否已查看
    optional bool isCheck = 6; //是否已领取奖励
    repeated hall_bag_item attach = 7; //附件:奖励
    optional int32 date = 8; //邮件的时间
}

//邮件类型
enum hall_enum_mail_type {
    SYSTEM = 1; //系统邮件
    FRIEND_ADD = 2; //好友申请邮件
}

//背包单个道具
message hall_bag_item {
    optional hall_enum_props_type type = 1; //道具类型
    optional int32 amount = 2; //数量
}

//道具类型
enum hall_enum_props_type {
    TYPE_LABA = 1; //大喇叭
    TYPE_JIPAIQI = 2; //记牌器
    TYPE_FANGKA = 3; //房卡
    TYPE_EXP_3000 = 4; //3000经验
}

//单个任务
message hall_item_task {
    optional int32 id = 1;
    optional hall_enum_taskType type = 2; //任务类型
    optional string title = 3; //任务内容
    optional string reward = 4; //任务奖励
    optional int32 Num = 5; //需要完成的总数
}

//任务类型
enum hall_enum_taskType {
    TYPE_MJ = 1; //麻将
    TYPE_DDZ = 2; //斗地主
    TYPE_ZJH = 3; //炸金花
}

//vip等级
enum hall_user_VIP {
    LV_1 = 1; //vip lv1
    LV_2 = 2; //vip lv2
    LV_3 = 3; //vip lv3
    LV_4 = 4; //vip lv4
    LV_5 = 5; //vip lv5
    LV_6 = 6; //vip lv6
}

//个人信息
message hall_userData {
    optional string userName = 1; //用户昵称
    optional int32 userId = 2; //用户ID
    optional int64 niceValue = 3; //魅力值
    optional int64 evilValue = 4; //恶人值
    optional int32 userLevel = 5; //用户等级
    optional bool userVIP = 6; //是否是会员
    optional hall_user_VIP userVIPLv = 7; //会员等级
    optional int64 userMoney = 8; //用户金币
    optional int64 userDiamond = 9; //用户钻石
    optional string userRedBag = 10; //用户红包金额
    optional int64 userLotteryTicket = 11; //用户奖券
    optional bool sex = 12; //性别
}

//排行信息
message hall_item_rank {
    optional int32 placing = 1; //名次
    optional int32 userId = 2; //用户
    optional string rankInfo = 3; //排行项目
}

//金币专区
message CoinZone {
    repeated GoodsItem pay = 1; //充值金额
}

//钻石专区
message DiamondZone {
    repeated GoodsItem pay = 1; //充值金额
}
//兑换专区
message ExchangeZone {
    repeated GoodsItem money = 1; //兑换金额
}

//购买专区
message BuyZone {
    repeated GoodsItem pay = 1; //花费金额
}

//商品类型
message GoodsItem {
    optional int32 id = 1;
    optional int32 money = 2; //金额
    optional string img = 3; //商品图片
}